--- a/PS5/gradient_descent.ipynb
+++ b/PS5/gradient_descent.ipynb
@@ -127,6 +127,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "uv_array = [(1, 1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def coordinate_descent(n_in):\n",
     "    u_t, v_t = get_last_uv()\n",
     "    \n",
@@ -138,14 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.925929944387236e-34\n"
+      "0.13981379199615315\n"
      ]
     }
    ],
