Fixed some style issues

--- a/PS8/cross_validation.ipynb
+++ b/PS8/cross_validation.ipynb
@@ -47,15 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_my_kernel(Q):\n",
-    "    def my_kernel(xn, xm):\n",
-    "        return (1 + np.dot(xn, xm.T)) ** Q\n",
-    "    \n",
-    "    return my_kernel"
+    "def transform_data(x1, x2):\n",
+    "    return (1, x1, x2)"
    ]
   },
   {
@@ -117,6 +114,22 @@
     "    # misclassified points are opposite sign so will be -1 when multiplied\n",
     "    error = yn * y_pred\n",
     "    return np.count_nonzero(error == -1) / len(yn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_w_reg(Z, ZT, lambda_value, y):\n",
+    "    step_1 = np.matmul(ZT, Z)\n",
+    "    step_2 = step_1 + lambda_value * np.identity(len(step_1))\n",
+    "    step_3 = np.linalg.inv(step_2)\n",
+    "    step_4 = np.matmul(step_3, ZT)\n",
+    "    w_reg = np.matmul(step_4, y)\n",
+    "    \n",
+    "    return w_reg"
    ]
   },
   {
